Fix load-time weaving for latest JDK according to:
https://bugs.eclipse.org/bugs/show_bug.cgi?id=546305